force-app/main/default/objects/ucinn_portal_Zone__c/ucinn_portal_Zone__c.object-meta.xml
<CustomObject>
    <label>Zone</label>
    <nameField>
        <label>Zone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>