force-app/main/default/objects/ucinn_portal_Zone__c/fields/Footer_Content__c.field-meta.xml
<CustomField>
    <fullName>Footer_Content__c</fullName>
    <label>Footer Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>