force-app/main/default/objects/ucinn_portal_Zone__c/fields/Header_Image_from_URL__c.field-meta.xml
<CustomField>
    <fullName>Header_Image_from_URL__c</fullName>
    <label>Header Image from URL</label>
    <type>Url</type>
</CustomField>