force-app/main/default/objects/ucinn_portal_Zone__c/fields/Instagram_Link__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Link__c</fullName>
    <inlineHelpText>Please prefix with either http:// or https://</inlineHelpText>
    <label>Instagram Link</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>