force-app/main/default/objects/ucinn_portal_Zone__c/fields/Is_Display_on_Portal__c.field-meta.xml
<CustomField>
    <fullName>Is_Display_on_Portal__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Display on Portal</label>
    <type>Checkbox</type>
</CustomField>