force-app/main/default/objects/ucinn_portal_Zone__c/fields/Logo_Image__c.field-meta.xml
<CustomField>
    <fullName>Logo_Image__c</fullName>
    <label>Logo Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>