force-app/main/default/objects/ucinn_portal_Zone__c/fields/Logo_Image_Alt_Text__c.field-meta.xml
<CustomField>
    <fullName>Logo_Image_Alt_Text__c</fullName>
    <label>Logo Image Alt Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>