force-app/main/default/objects/ucinn_portal_Zone__c/fields/Pre_Header__c.field-meta.xml
<CustomField>
    <fullName>Pre_Header__c</fullName>
    <label>Pre Header</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>