force-app/main/default/objects/ucinn_portal_Zone__c/fields/Search_Radius__c.field-meta.xml
<CustomField>
    <fullName>Search_Radius__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Search Radius</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>