force-app/main/default/objects/ucinn_portal_Zone__c/fields/Section_Content_Html__c.field-meta.xml
<CustomField>
    <fullName>Section_Content_Html__c</fullName>
    <inlineHelpText>Applies to each grouping of newsletter sections. use {sectionTitle} for the title of the section and {newsletterSections} for the content from the listing sections, and {backgroundColor} for background color.</inlineHelpText>
    <label>Section Content Html</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>