force-app/main/default/objects/ucinn_portal_Zone__c/fields/Social_Media_Content__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Content__c</fullName>
    <label>Social Media Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>