force-app/main/default/objects/ucinn_portal_Zone__c/fields/Social_Media_Order__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Order__c</fullName>
    <label>Social Media Order</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>